sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:4: error: type mismatch;
 found   : Unit
 required: Boolean
	while (swapped = false){
                       ^AlgCocktailSort1:5: error: value setNombreValeurs is not a member of Int
		for(i<-0 setNombreValeurs()-2) {
                         ^