sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
	var swapped=true
	while (swapped = false){
		for(i<-0 setNombreValeurs()-2) {
			swapped = false
			if(plusPetit(i,i+1)){
				echange(i+1,i)
				}
	 	for(i<-setNombreValeurs()-2 to 0 by -1) {
	  		swapped = false
	  		if(plusPetit(i,i+1)) {
	  			echange(i+1,i)
	  				} 		
	  			}
			}
		}
	 	
	}

